--- a/css/components/_checkbox.css
+++ b/css/components/_checkbox.css
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: center;
 
-    width: calc(var(--checkbox-circle-size) * 3);
+    width: calc(var(--checkbox-circle-size) * 2.3);
     height: calc(var(--checkbox-circle-size) + 2px);
 
     background-color: #B0B0B0;
@@ -27,8 +27,7 @@
     opacity: 0;
 }
 
-
-.checkbox__label::before {
+.checkbox__label {
     position: absolute;
     inset: 50% var(--checkbox-circle-inset) auto auto;
     transform: translate(0, -50%);
@@ -39,13 +38,32 @@
     aspect-ratio: 1/1;
 
     background-color: var(--bg-color);
+    box-shadow: 0px 0px 1px 0px rgba(66, 68, 90, 1);
     border-radius: 50%;
 
     transition: inset 0.5s ease-in-out;
+}
+
+.checkbox__icon {
+    position: absolute;
+    inset: 50% auto auto 50%;
+    transform: translate(-50%, -50%);
+
+    width: 18px;
+
+    opacity: var(--checkbox-icon-opacity, 1);
+    transition: opacity 0.5s ease-in-out;
+}
+
+.checkbox__icon.--last {
+    opacity: var(--checkbox-icon-opacity-last, 0);
 }
 
 .checkbox:has(.checkbox__input:checked) {
     --checkbox-circle-inset: calc(0% + 2px);
 
     background-color: #222222;
+
+    --checkbox-icon-opacity: 0;
+    --checkbox-icon-opacity-last: 1;
 }
