--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,9 @@ body {
 
     min-height: 100vh;
 
-    background: rgb(83,114,239);
+    background-color: rgb(83,114,239);
+
+    transition: background-color 0.6s ease-in-out;
 }
 
 button {
@@ -38,3 +40,9 @@ button {
 
     cursor: pointer;
 }
+
+/* body:has(.checkbox__input:checked) {
+    background-color: black;
+
+    transition: background-color 0.6s ease-in-out;
+} */
