--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,8 @@
 /* core */
 @import url('./iconfonts.css');
 
-
 /* components */
-
 @import url('./components/_checkbox.css');
-
 
 
 * {
@@ -21,6 +18,7 @@
 
 body {
     display: flex;
+
     justify-content: center;
     align-items: center;
 
@@ -32,22 +30,16 @@ body {
 }
 
 button {
-    padding: 0;
+    margin-left: 168px;
+
     border: none;
     font: inherit;
     color: inherit;
-    background-color: transparent;
+    /* background-color: transparent; */
 
     cursor: pointer;
 }
 
-/* body:has(.checkbox__input:checked) {
-    background-color: black;
-
-    transition: background-color 0.6s ease-in-out;
-} */
-
-
-.dark-mdoe {
+.dark-mode {
     background-color: black;
 }
