--- a/css/style2.css
+++ b/css/style2.css
@@ -27,6 +27,11 @@ body {
     align-items: center;
 }
 
+.block-links.--is-show {
+    --opacyti-link: 1;
+    --scale-link: 1;
+}
+
 .block-links__share-icon {
     position: absolute;
     display: flex;
@@ -63,60 +68,51 @@ body {
     width: 50px;
     height: 50px;
 
+    opacity: var(--opacyti-link, 0);
+    scale: var(--scale-link, 0);
+
     border-radius: 100% 5px 5px 5px;
     background-color: white;
 
     transition: 0.4s ease-in-out;
-    transition-property: transform, background-color;
+    transition-property: transform, scale, background-color, opacity;
+}
+
+.block-links__link svg {
+    width: 12px;
+    height: 12px;
+
+    transform: translate(var(--link-icon-pos, 27%, 23%));
 }
 
 .block-links__link.--2 {
+    --link-icon-pos: -28%, 24%;
     border-radius: 5px 100% 5px 5px;
+
+    --icon-color-hover: rgb(39, 39, 39);
 }
 
 .block-links__link.--3 {
+    --link-icon-pos: 28%, -15%;
     border-radius: 5px 5px 5px 100%;
+
+    --icon-color-hover: rgb(39, 39, 39);
 }
 
 .block-links__link.--4 {
+    --link-icon-pos: -28%, -15%;
     border-radius: 5px 5px 100% 5px;
-}
 
-.link__icon.--top {
-    position: absolute;
-    
-    transform: translate(0%);
-
-    width: 12px;
-    height: 12px;
-}
-
-.link__icon.--bottom {
-    position: absolute;
-    width: 12px;
-    height: 12px;
-
-    bottom: 45%;
+    --icon-color-hover: #66f;
 }
 
 .block-links__link:hover {
     transform: scale(1.15);
 
-    background-color: #FF1493;
+    background-color: var(--icon-color-hover, #FF1493);
 
     fill: white;
 
     transition: transform 0.3s ease-in-out;
 }
 
-.block-links__link.--2:hover {
-    background-color: rgb(39, 39, 39);
-}
-
-.block-links__link.--3:hover {
-    background-color: rgb(39, 39, 39);
-}
-
-.block-links__link.--4:hover {
-    background-color: #66f;
-}
