--- a/css/components/_aside.css
+++ b/css/components/_aside.css
@@ -1,12 +1,10 @@
-
 .menu__aside {
     display: flex;
     flex-direction: column;
 
-    background-color: black;
+    padding: 20px;
 
-    max-width: 150px;
-    height: 100vh;
+    background-color: black;
 
     grid-area: aside;
 }
@@ -15,7 +13,7 @@
     display: flex;
     flex-direction: column;
 
-    min-height: 70%;
+    flex: 1;
 
     color: white;
 }
@@ -32,7 +30,7 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    margin: 10px 0 0 0;
+
     text-align: center;
 
     p {
@@ -61,7 +59,8 @@
 
     align-items: center;
     flex-direction: column;
-
+    
+    gap: 10px;
 }
 
 .menu__aside-link {
@@ -69,10 +68,10 @@
     justify-content: center;
     align-items: center;
 
-    margin-bottom: 10px;
 
-    width: 15px;
-    height: 15px;
+
+    width: 32px;
+    aspect-ratio: 1;
 
     cursor: pointer;
 
@@ -84,7 +83,7 @@
 
 .menu__aside-link svg {
     fill: white;
-    width: 8px;
+    width: 10px;
 }
 
 .menu__aside-link:hover {
