--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 
 /* core */
-@import url('./iconfonts.css');
+/* @import url('./iconfonts.css'); */
 
 /* components */
-@import url('./components/_checkbox.css');
-@import url('./components/_home-welcome.css');
+@import url('./components/_menu.css');
 @import url('./components/_aside.css');
 
 
 * {
     margin: 0;
     padding: 0;
-
-    
-    font-family: 'marchik-icom';
 }
 
 body {
@@ -25,6 +21,10 @@ body {
     align-items: center;
 
     height: 100vh;
+
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    line-height: 1.4;
 }
 
 button {
@@ -41,46 +41,4 @@ button {
     align-content: center;
     justify-content: center;
     width: 100vw;
-}
-
-
-@media (max-width: 480px) {
-    .menu {
-        display: grid;
-        grid-template-areas: 'main' 'aside';
-    }
-
-    .menu__aside {
-        display: flex;
-        flex-direction: row;
-
-        max-width: 100%;
-        height: 100%;
-    }
-
-    .menu__aside-content {
-        display: flex;
-        flex-direction: row; 
-
-        min-width: 75%;
-    }
-
-    .menu__aside-line {
-        border-right: 0.3px solid #ccc;
-        margin: 20px 10px 20px ;
-    }
-
-    .menu__aside-text-language {
-        margin: 0 0 0 10px;
-        text-align: center;
-    }
-
-    .menu__aside-language {
-        margin-left: 20px;
-    }
-
-    .menu__aside-links {
-        flex-direction: row;
-        gap: 10px;
-    }
 }
