--- a/css/components/_menu.css
+++ b/css/components/_menu.css
@@ -1,18 +1,52 @@
 .menu {
-    position: relative;
-    display: grid;
-    grid-template-areas: 'main aside';
-    grid-template-columns: 1fr 170px;
+    position: fixed;
+    inset: 0;
+    z-index: 100;
 
-    min-width: 100%;
-    min-height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 170px; 
 
     overflow: hidden;
+
+    transition: inset 1s ease-in-out;
+}
+
+.menu:not(.--is-active) {
+    position: absolute;
+    inset: 0 0 auto 90%;
+
+    grid-template-columns: max-content; 
+    align-items: center;
+    justify-content: center;
+
+    background-color: white;
+
+    padding: 8px;
+    aspect-ratio: 1;
+    
+    min-width: auto;
+    min-height: auto;
+
+    & .menu__main, & .menu__aside {
+        display: none;
+    }
+
+    & .menu__btn-close {
+        --menu-btn-close-position: static;
+        --menu-btn-close-transform-2: none;
+        --menu-btn-close-transform: none;
+
+        position: static;
+        width: 32px;
+
+        flex-direction: column;
+        gap: 4px;
+
+        transform: none;
+    }
 }
 
 .menu__main {
-    grid-area: main;
-
     margin: auto auto auto 13vw;
 
     padding: 48px;
@@ -63,11 +97,11 @@
 
 .menu__btn-close::before,
 .menu__btn-close::after {
-    position: absolute;
+    position: var(--menu-btn-close-position, absolute);
     width: 100%;
     height: 3px;
 
-    transform: rotate(45deg);
+    transform: var(--menu-btn-close-transform, rotate(45deg));
 
     content: '';
 
@@ -75,7 +109,7 @@
 }
 
 .menu__btn-close::after {
-    transform: rotate(-45deg);
+    transform: var(--menu-btn-close-transform-2, rotate(-45deg));
 }
 
 .menu__logo-company {
@@ -117,8 +151,6 @@
     padding: 20px;
 
     background-color: black;
-
-    grid-area: aside;
 }
 
 .menu__aside-content {
@@ -206,9 +238,7 @@
     .menu {
         display: grid;
         grid-auto-rows: 1fr auto;
-        grid-template-areas: 'main' 'aside';
         grid-template-columns: auto;
-        grid-template-rows: 1fr auto;
     }
 
     /* .menu__nav {
