--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
 
-
-/* core */
-/* @import url('./iconfonts.css'); */
-
-/* components */
-@import url('./components/_menu.css');
+/* --components-- */
+@import url(./components/_header.css);
 
 * {
     margin: 0;
     padding: 0;
+
+    font-family: "Source Sans 3", sans-serif;
 }
 
 a {
@@ -18,35 +16,8 @@ a {
 }
 
 body {
-    display: flex;
+    min-width: 100vw;
+    min-height: 100vh;
 
-    justify-content: center;
-    align-items: center;
-
-    height: 100vh;
-
-    font-family: "Roboto", sans-serif;
-    font-style: normal;
-    line-height: 1.4;
-
-}
-
-button {
-    border: none;
-    font: inherit;
-    color: inherit;
-    background-color: transparent;
-
-    cursor: pointer;
-}
-
-.menu::before {
-    z-index: -1;
-    position: absolute;
-
-    left: 0;
-    top: 0;
-
-    content: url(../img/cafebg.jpg);
-    opacity: 0.1;
+    background-color: rgba(242, 245, 247, 1);
 }
